# sc2-api-rs

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  NOTES.md  README.md  build.rs
docs/: api_design.md
examples/: client.rs  game.rs  mock_server.rs  ping.rs  sc2api_protocol.rs  simple_bot.rs  threads.rs
src/: bot.rs  connection.rs  engine.rs  errors.rs  lib.rs
src/protos/: common.rs  data.rs  debug.rs  error.rs  query.rs  raw.rs  sc2api.rs  score.rs  spatial.rs  ui.rs
